fixes #3957. added general icon-text button styles to button.styl. citation buttons don't wrap and fall to next line.

--- a/web/stylus/styles/button.styl
+++ b/web/stylus/styles/button.styl
@@ -47,6 +47,7 @@ button, .button
   &.mini
     border-padding-height 1px 1px
     padding-width f4
+    font-size b2
     span.icon
       height 13px
       width 13px
@@ -63,6 +64,13 @@ button, .button
     background-position center
     background-repeat no-repeat
     size b1
+    
+  &.icon-text
+    display initial
+    white-space nowrap
+    .icon
+      vertical-align middle
+      margin-right b8
 
 // link button
 
